kubernetes/apps/downloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    volsync.backube/privileged-movers: "true"
  labels:
    resource.kubernetes.io/admin-access: "true"
